@@ -152,7 +152,9 @@ const UINT CPWToolBar::m_OtherIDs[] = {
   ID_MENUITEM_CUSTOMIZETOOLBAR,
   ID_MENUITEM_VKEYBOARDFONT,
   ID_MENUITEM_COMPVIEWEDIT,
-  ID_MENUITEM_COPY_TO_ORIGINAL
+  ID_MENUITEM_COPY_TO_ORIGINAL,
+  ID_MENUITEM_EXPORTENT2PLAINTEXT,
+  ID_MENUITEM_EXPORTENT2XML
 };
 
 const UINT CPWToolBar::m_MainToolBarClassicBMs[] = {
@@ -228,7 +230,9 @@ const UINT CPWToolBar::m_OtherClassicBMs[] = {
   IDB_CUSTOMIZETBAR_CLASSIC,
   IDB_CHANGEVKBDFONTMENU_CLASSIC,
   IDB_VIEWEDIT_CLASSIC,
-  IDB_IMPORT_CLASSIC
+  IDB_IMPORT_CLASSIC,
+  IDB_EXPORTTEXT_CLASSIC,
+  IDB_EXPORTXML_CLASSIC,
 };
 
 const UINT CPWToolBar::m_MainToolBarNewBMs[] = {
@@ -346,7 +350,9 @@ const UINT CPWToolBar::m_OtherNewBMs[] = {
   IDB_CUSTOMIZETBAR_NEW,
   IDB_CHANGEVKBDFONTMENU_NEW,
   IDB_VIEWEDIT_NEW,
-  IDB_IMPORT_NEW
+  IDB_IMPORT_NEW,
+  IDB_EXPORTTEXT_NEW,
+  IDB_EXPORTXML_NEW
 };
 
 // Additional bitmaps not on ToolBar
@@ -380,7 +386,9 @@ const UINT CPWToolBar::m_OtherNewDisBMs[] = {
   IDB_CUSTOMIZETBAR_NEW,    // Don't need another disabled bitmap as never dispayed
   IDB_CHANGEVKBDFONTMENU_NEW_D,
   IDB_VIEWEDIT_NEW_D,
-  IDB_IMPORT_NEW_D
+  IDB_IMPORT_NEW_D,
+  IDB_EXPORTTEXT_NEW_D,
+  IDB_EXPORTXML_NEW_D
 };
 
 IMPLEMENT_DYNAMIC(CPWToolBar, CToolBar)
