@@ -524,10 +524,10 @@ FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     CONTROL         "Restrict to a subset of entries:",IDC_ADVANCED_SUBGROUP_SET,
                     "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,8,9,206,9
-    LTEXT           "where",IDC_STATIC,18,22,24,8
+    LTEXT           "where",IDC_STATIC_WHERE,18,22,24,8
     COMBOBOX        IDC_ADVANCED_SUBGROUP_OBJECT,43,22,90,73,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_ADVANCED_SUBGROUP_FUNCTION,144,22,90,86,CBS_DROPDOWNLIST | CBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "the following text:",IDC_STATIC,18,37,196,8
+    LTEXT           "the following text:",IDC_STATIC_TEXT,18,37,196,8
     EDITTEXT        IDC_ADVANCED_SUBGROUP_NAME,20,47,127,12,ES_AUTOHSCROLL | WS_DISABLED
     CONTROL         "Case Sensitive",IDC_ADVANCED_SUBGROUP_CASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,62,126,10
     LTEXT           "Available Fields:",IDC_STATIC,5,83,103,8
