@@ -137,6 +137,8 @@ BEGIN
         MENUITEM "Create &Shortcut",            ID_MENUITEM_CREATESHORTCUT, MFT_STRING
         MENUITEM "&Go to Base entry",           ID_MENUITEM_GOTOBASEENTRY, MFT_STRING
         MENUITEM "&Edit Base entry",            ID_MENUITEM_EDITBASEENTRY, MFT_STRING
+        MENUITEM "Export Entry to Plain Text...", ID_MENUITEM_EXPORTENT2PLAINTEXT, MFT_STRING
+        MENUITEM "Export Entry in XML format...", ID_MENUITEM_EXPORTENT2XML, MFT_STRING
     END
     POPUP "&View", ID_VIEWMENU, MFT_STRING
     BEGIN
@@ -226,6 +228,11 @@ BEGIN
         MENUITEM "Create &Shortcut",            ID_MENUITEM_CREATESHORTCUT
         MENUITEM "&Go to Base entry",           ID_MENUITEM_GOTOBASEENTRY
         MENUITEM "&Edit Base entry",            ID_MENUITEM_EDITBASEENTRY
+        POPUP "Export Entry &To"
+        BEGIN
+            MENUITEM "&Plain Text (tab separated)...", ID_MENUITEM_EXPORTENT2PLAINTEXT
+            MENUITEM "&XML format...",          ID_MENUITEM_EXPORTENT2XML
+        END
         MENUITEM SEPARATOR
         MENUITEM "Add &Group",                  ID_MENUITEM_ADDGROUP
     END
@@ -408,6 +415,8 @@ BEGIN
     ID_MENUITEM_GENERATEPASSWORD "\nGenerate Password"
     ID_MENUITEM_UNDO             "\nUndo"
     ID_MENUITEM_REDO             "\nRedo"
+    ID_MENUITEM_EXPORTENT2PLAINTEXT "\nExport Entry to Plain Text..."
+    ID_MENUITEM_EXPORTENT2XML    "\nExport Entry in XML format..."
 END
 
 STRINGTABLE
